--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Hubby</title>
+    <title>Elena's Birthday</title>
   </head>
   <body>
     <h1>Buon ventottesimo Compleanno Amore mio!</h1>
